2005-09-26  Brian Cameron <Brian.Cameron@sun.com>

        * gui/gdmsetup.c, gui/gdmphotosetup.c:  Only set right/left
          mouse buttons to map to button1 when RUNNING_UNDER_GDM
          and now show hidden files by default in file dialogs.
          Fixes bug #317152.

2005-09-22  Rodrigo Moya <rodrigo@novell.com>

	* gui/gdmflexiserver.c (run_again): use gnome-screensaver if
	available instead of xscreensaver.

2005-09-22  Rodrigo Moya <rodrigo@novell.com>

	* gui/gdmphotosetup.c: fixed compilation warnings.
	(add_preview_widget): made it static to avoid 'no previous prototype'
	warning.
	(browse_button_cb, fill_model): removed unused variables.

2005-09-20  Brian Cameron <Brian.Cameron@sun.com>

	* README.install, pam_allow.c: Add documentation
	  regarding how to set up Automatic Login on 
	  Solaris.
	* daemon/Makefile.am, gui/Makefile.am, 
	  gui/greeter/Makefile.am, gui/modules/Makefile.am,
	  vicious-extensions/Makefile.am:  Remove
	  illegal reference to build directory in installed
	  .la files.  Fixes bug #316793, patch provided by
	  Stanislav Brabec <sbrabec@suse.cz>.
	* gui/gdmlogin.c: Fix comment for translators to
	  make it more clear that %l is a strftime option
	  for 12 hour format.  Fixes bug #316773.
	  
2005-09-14  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/slave.c:  Made error message about dmrc
	  file being ignored more clear.  Fixes bug
	  #316242.

2005-09-14  Bastien Nocera  <hadess@hadess.net>

	* daemon/xdmcp.c: (gdm_xdmcp_decode_packet):
	 Make XdmcpFill() failure a debug, as it also happens when the client
	 disconnects from the XDMCP server before the session was setup
	 (Closes: #316316)

2005-09-14  Brian Cameron <Brian.Cameron@sun.com>

	* daemon/gdm.[ch], daemon/slave.c,
	  config/gdm.conf.in:  Added debug/gestures
	  key so that you can turn on debugging 
	  for the gesture listeners separately from
	  general debug.  Gesture listener debug
	  output is too verbose to include in
	  general debug.