@@ -4,6 +4,7 @@
           mouse buttons to map to button1 when RUNNING_UNDER_GDM
           and now show hidden files by default in file dialogs.
           Fixes bug #317152.
+	* gui/gdmflexiserver.c: Cleaned up startnew option.
 
 2005-09-22  Rodrigo Moya <rodrigo@novell.com>
 
